# scrapely

./: Cargo.toml
examples/advanced/: Cargo.toml
examples/advanced/src/: main.rs
examples/advanced_config/: Cargo.toml
examples/advanced_config/src/: main.rs
examples/books/: Cargo.toml
examples/books/src/: main.rs
examples/cancellation/: Cargo.toml
examples/cancellation/src/: main.rs
examples/custom_observer/: Cargo.toml
examples/custom_observer/src/: main.rs
examples/hacker-news/: Cargo.toml
examples/hacker-news/src/: main.rs
examples/quotes/: Cargo.toml
examples/quotes/src/: main.rs
examples/rate_limiting/: Cargo.toml
examples/rate_limiting/src/: main.rs
examples/stats_monitoring/: Cargo.toml
examples/stats_monitoring/src/: main.rs
scrapely_macros/: Cargo.toml
scrapely_macros/src/: codegen.rs  lib.rs  parse.rs  types.rs  validate.rs
scrapely_macros/src/item_derive/: mod.rs
src/: backend.rs  crawler.rs  error.rs  extract.rs  item.rs  lib.rs
tests/: basic_extraction.rs  completion_detection.rs  config_validation.rs  crawler_tests.rs  edge_cases.rs  error_handling.rs  integration_tests.rs  nested_items.rs  regex_transform.rs  url_normalizer_test.rs
