[workspace]
members = [".", "scrapely_macros", "examples/*"]

[package]
name = "scrapely"
version = "0.1.0"
edition = "2024"

[dependencies]
scrapely_macros = { workspace = true }
thiserror = "2.0.17"
scraper = "0.24.0"


[workspace.dependencies]
scrapely = { path = "." }
scrapely_macros = { path = "./scrapely_macros" }
