[workspace]
members = [".", "scrapely_macros", "examples/*"]

[package]
name = "scrapely"
version = "0.1.0"
edition = "2024"

[dependencies]
scrapely_macros = { workspace = true }

async-trait = "0.1.89"
futures-util = "0.3.31"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7"

[dev-dependencies]
proptest = "1.0"

[workspace.dependencies]
scrapely = { path = "." }
scrapely_macros = { path = "./scrapely_macros" }
