[package]
name = "scrapely_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
either = "1.15.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0.114"
