[package]
name = "hacker-news"
version = "0.1.0"
edition = "2024"

[dependencies]
scrapely = { workspace = true }

anyhow = "1.0.100"
async-trait = "0.1.89"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
scraper = "0.24"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
